logging sql statements and quarkus logging added for debugging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,10 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/moviesdb
 quarkus.datasource.username=postgres
 quarkus.datasource.password=password
 quarkus.hibernate-orm.database.generation=update
+#quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.datasource.jdbc.max-size=16
+#log sql statements
+quarkus.hibernate-orm.log.sql=true
+#error logging
+quarkus.log.level=DEBUG
+quarkus.log.category."org.hibernate".level=ERROR
