--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ quarkus.hibernate-orm.log.sql=true
 #error logging
 quarkus.log.level=DEBUG
 quarkus.log.category."org.hibernate".level=ERROR
+quarkus.http.auth.basic=true
