dependencies and configuration for an h2 test db- first two repository layer tests succesfull

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.log.level=DEBUG
 quarkus.log.category."org.hibernate".level=ERROR
 quarkus.http.auth.basic=true
+
+#configurin an H2 database for tests
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:db
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
+#%test.quarkus.hibernate-orm.sql-load-script=META-INF/sql/import-test.sql
+%test.quarkus.http.port=9090
