--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/moviesdb
 quarkus.datasource.username=postgres
-quarkus.datasource.password=password
+#quarkus.datasource.password=password
+quarkus.datasource.password=1234
 quarkus.hibernate-orm.database.generation=update
 #quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.datasource.jdbc.max-size=16
